--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,14 @@ dependencies:
   animate_do: ^4.2.0
   intl: ^0.20.2
   uuid: ^4.5.1
-  flutter_datetime_picker: ^1.5.1
   flutter_beautiful_popup: ^1.7.0
   panara_dialogs: ^0.1.5
   lottie: ^3.3.0
   fluttertoast: ^9.0.0
   flutter_slider_drawer: ^3.0.2
   go_router: ^16.2.4
+  flutter_datetime_picker_plus: ^2.2.0
+  time_picker_spinner: ^1.0.2
 
 dev_dependencies:
   flutter_test:
