--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,13 @@ dependencies:
   go_router: ^16.2.4
   flutter_datetime_picker_plus: ^2.2.0
   time_picker_spinner: ^1.0.2
-
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.5
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
+  fancy_snackbar:
+    git:
+      url: https://github.com/MR0100/fancy_snackbar.git
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   isar_generator: ^3.1.0+1
   build_runner: ^2.4.13
 
