--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   image_picker: ^1.2.0
   permission_handler: ^11.0.1
   shared_preferences: ^2.5.3
+  fl_chart: ^0.68.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
